--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -4,6 +4,11 @@ margin-left: auto;
 margin-right: auto;
 }
 
-.Blue {
-color: blue;
+.Border {
+border: Solid Blue 3px;
+  border-radius: 20px; 
+}
+.BorderAfter {
+border: Solid black 10px;
+  border-radius: 20px; 
 }
