--- a/Resources/CSS/Dropdown.css
+++ b/Resources/CSS/Dropdown.css
@@ -1,7 +1,7 @@
 
 .navbar {
   overflow: hidden;
-  background-color: #333;
+  background-color: #ffffff;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -32,7 +32,7 @@
 }
 
 .navbar a:hover, .dropdown:hover .dropbtn, .dropbtn:focus {
-  background-color: red;
+  background-color: grey;
 }
 
 .dropdown-content {
