--- a/Resources/CSS/Dropdown.css
+++ b/Resources/CSS/Dropdown.css
@@ -1,7 +1,7 @@
 
 .navbar {
   overflow: hidden;
-  background-color: #ffffff;
+  background-color: grey;
   font-family: Arial, Helvetica, sans-serif;
 }
 
