--- a/Resources/CSS/Dropdown.css
+++ b/Resources/CSS/Dropdown.css
@@ -60,3 +60,7 @@
 .show {
   display: block;
 }
+
+body {
+ background-image:url(http://xplosivex.github.io/Burkoloy/Resources/Images/Background.jpg);
+}
