--- a/Resources/CSS/Dropdown.css
+++ b/Resources/CSS/Dropdown.css
@@ -62,5 +62,5 @@
 }
 
 body {
- background-image:url(http://xplosivex.github.io/Burkoloy/Resources/Images/Background.jpg);
+ background-image:url("http://xplosivex.github.io/Burkoloy/Resources/Images/Background.jpg");
 }
