--- a/Resources/CSS/Dropdown.css
+++ b/Resources/CSS/Dropdown.css
@@ -64,3 +64,6 @@
 body {
  background-image:url("http://xplosivex.github.io/Burkoloy/Resources/Images/Background.jpg");
 }
+.DivBackground {
+ background-image:url("http://xplosivex.github.io/Burkoloy/Resources/Images/DivBackground.jpg");
+}
