--- a/Resources/CSS/Fonts.css
+++ b/Resources/CSS/Fonts.css
@@ -1,10 +1,10 @@
 @font-face  {
   font-family: Royal;
-  src:url("http://burkis.onthewifi.com/Resources/Fonts/Font1.tff");
+  src:url("http://xplosivex.github.io/Burkoloy/Resources/Fonts/Font1.ttf");
 
 }
 @font-face  {
   font-family: OldEng;
-  src:url("http://burkis.onthewifi.com/Resources/Fonts/Font2.tff");
+  src:url("http://xplosivex.github.io/Burkoloy/Resources/Fonts/Font2.ttf");
 
 }
